objects/SCP_Certa_GC__Account_Data__c.object
<CustomObject>
    <fields>
        <fullName>SCP_Certa_GC__Account_Review_Link__c</fullName>
        <formula>HYPERLINK(&apos;/apex/accountMasterPlan?id=&apos;+ SCP_Certa_GC__Account__r.Id, TEXT( SCP_Certa_GC__Account_Review__r.SCP_Certa_GC__Total_Score__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Review</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Account_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Review</label>
        <referenceTo>SCP_Certa_GC__Account_Review__c</referenceTo>
        <relationshipLabel>Accounts Data</relationshipLabel>
        <relationshipName>Accounts_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts Data</relationshipLabel>
        <relationshipName>Accounts_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Approval_Total_Value__c</fullName>
        <formula>HYPERLINK(&apos;/apex/accountMasterPlan?id=&apos;+ SCP_Certa_GC__Account__r.Id, TEXT( SCP_Certa_GC__Account_Review__r.SCP_Certa_GC__Total_Score__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Total Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Competitors_Last_Update__c</fullName>
        <label>Competidores Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Competitors_Link__c</fullName>
        <formula>HYPERLINK(&apos;/apex/accountOverallRelationshipWindow?id=&apos;+ SCP_Certa_GC__Account__r.Id, TEXT(SCP_Certa_GC__Competitors_Number__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competidores</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Competitors_Number__c</fullName>
        <label>Competitors Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__CurrencyIsoCode__c</fullName>
        <label>CurrencyIsoCode</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__FCV_New_Potential_Business__c</fullName>
        <formula>HYPERLINK(&apos;/apex/accountGrowthStrategy?id=&apos;+ SCP_Certa_GC__Account__r.Id, SCP_Certa_GC__CurrencyIsoCode__c + &apos; &apos; + TEXT(SCP_Certa_GC__PNB_Amount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FCV Potenciales Negocios</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Opportunities_With_RDM_Link__c</fullName>
        <formula>HYPERLINK(&apos;/apex/accountOpportunityList?id=&apos;+ SCP_Certa_GC__Account__r.Id, TEXT(SCP_Certa_GC__Opportunities_With_RDM__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oportunidades con Mosaico</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Opportunities_With_RDM__c</fullName>
        <label>Opportunities With RDM</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Opportunities_With_VD__c</fullName>
        <label>Opportunities With VD</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Opportunities_With_Value_Drivers__c</fullName>
        <formula>HYPERLINK(&apos;/apex/accountIndustryTrendsWindowNew?id=&apos;+ SCP_Certa_GC__Account__r.Id, TEXT( SCP_Certa_GC__Opportunities_With_VD__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oportunidades con Value Drivers</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Opportunities__c</fullName>
        <formula>HYPERLINK(&apos;/00O15000007Iw8h?pn0=eq&amp;pv0=&apos;+ SCP_Certa_GC__Account__r.Id, &apos;Oportunidades&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oportunidad</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__PNB_Amount__c</fullName>
        <label>PNB Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__SCP_Past_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SCP Past Activity</label>
        <referenceTo>SCP_Certa_GC__PastActivity__c</referenceTo>
        <relationshipLabel>Accounts Data</relationshipLabel>
        <relationshipName>Accounts_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__SCP_Share_of_Wallet__c</fullName>
        <formula>HYPERLINK(&apos;/apex/accountHistoricalBusinessWindow?id=&apos;+ SCP_Certa_GC__Account__r.Id, TEXT (ROUND((SCP_Certa_GC__SCP_Past_Activity__r.SCP_Certa_GC__Share_of_Wallet__c *100), 2))+&apos;%&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SCP Share of Wallet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Strategic_Initiative_Last_Update__c</fullName>
        <label>Desafíos | Iniciativas, Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Strategic_Initiative_Link__c</fullName>
        <formula>HYPERLINK(&apos;/apex/accountStrategicContextWindow?id=&apos;+ SCP_Certa_GC__Account__r.Id, TEXT(SCP_Certa_GC__Strategic_Initiative_Number__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Desafíos | Iniciativas de Negocio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Strategic_Initiative_Number__c</fullName>
        <label>Strategic Initiative Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Trade_Balance__c</fullName>
        <formula>HYPERLINK(&apos;/apex/accountHistoricalBusinessWindow?id=&apos;+ SCP_Certa_GC__Account__r.Id, &apos;Trade Balance&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actividad Comercial Neta</label>
        <type>Text</type>
    </fields>
    <label>Account Data</label>
    <nameField>
        <label>Nombre de Account Data</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounts Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>